[package]
name = "zdatabase"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
bincode = "1.3.3"
lazy_static = "1.5.0"
prettytable = "0.10.0"
tabled = "0.16.0"
tokio-tungstenite = "0.24.0"
tokio = { version = "1.28", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.14"
warp = "0.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
once_cell = "1.20.2"
clap = { version = "4.5.22", features = ["derive"] }
